Adicionado o estilo do footer

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 #page {
   box-sizing: bo;
   width: 1120px;
-  margin: 88px auto 137px;
+  margin: 88px auto 56px;
 }
 
 ol {
@@ -14,4 +14,21 @@ ol {
 
 ol h3 li {
   margin: 20px 30px 4px;
+}
+
+img {
+  width: 100%;
+  border-radius: 28px;
+}
+
+footer {
+  color: #333333;
+  text-align: center;
+  padding-bottom: 48px;
+}
+
+footer img {
+  max-width: 14px;
+  max-height: 12px;
+  vertical-align: middle;
 }
