--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #f5f4f0;
 }
@@ -12,27 +17,44 @@ body {
   font-size: 16px;
   font-weight: bold;
   color: #e1624f;
+  margin-bottom: 8px;
+}
+
+#content .headline {
+  margin-top: 24px;
 }
 
 h1 {
   font-weight: bold;
   font-size: 36px;
-}
-
-h2 {
-  font-weight: bold;
-  font-size: 32px;
-}
-
-h3 {
-  font-weight: bold;
-  font-size: 28px;
+  margin-bottom: 40px;
 }
 
 .subtitle {
   font-size: 16px;
   font-style: italic;
   text-align: center;
+  margin-top: 24px;
+}
+
+hr.divisor {
+  margin: 40px 0px 40px;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+h2 + p {
+  margin-bottom: 16px;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 28px;
 }
 
 p {
@@ -42,7 +64,7 @@ p {
 #page {
   box-sizing: bo;
   width: 1120px;
-  margin: 88px auto 56px;
+  margin: 88px auto 52px;
 }
 
 img {
@@ -50,16 +72,31 @@ img {
   border-radius: 28px;
 }
 
+#content ol img {
+  margin-top: 48px;
+}
+
+.content-card {
+  font-weight: bolder;
+}
+
 ol {
   padding: 0px;
 }
 
 ol h3 li {
-  margin: 20px 30px 4px;
+  margin: 20px 42px 8px;
 }
 
 ul li {
   list-style: disc;
+  /* list-style-position: inside; */
+  font-weight: bolder;
+  margin-left: 21px;
+}
+
+ul li::marker {
+  color: #333333;
 }
 
 footer {
@@ -72,4 +109,24 @@ footer img {
   max-width: 14px;
   max-height: 12px;
   vertical-align: middle;
+}
+
+.blue {
+  color: #0c51a7;
+}
+
+.pink {
+  color: #ea245e;
+}
+
+.purple {
+  color: #591b98;
+}
+
+.orange {
+  color: #e95e10;
+}
+
+#description {
+  text-align: center;
 }
